--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -2,5 +2,46 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <title>Techcon 2024 - Conference Homepage</title>
     </head>
+    <body>
+        <!-- Header -->
+         <header>
+            <h1>Techcon 2024</h1>
+            <nav>
+                <ul>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="schedule.html">Schedule</a></li>
+                    <li><a href="register.html">Register</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+         </header>
+
+         <!-- Main Content -->
+          <main>
+            <section>
+                <h2>Welcome to TechCon 2024</h2>
+                <p>
+                    Join us at TechCon 2024, the premier conference for innovators,
+                    developers, and tech enthusiasts from around the world. Explore
+                    groundbreaking ideas, connect with industry leaders, and experience
+                    the future of technology.
+                </p>
+
+                <!-- Promotional Video -->
+                <video controls width="640">
+                    <source src="promo.mp4" type="video/mp4">
+                    <track src="promo_captions.vtt" kind="subtitles" srclang="en" label="English">
+                    Your browser does not support the video tag. Please find the 
+                    promotional video description <a href="promo-description.txt">here</a>
+                </video>
+            </section>
+          </main>
+
+          <!-- Footer -->
+           <footer>
+            <p>&copy; 2024 TechCon. All right reserved. Explicit copyright.</p>
+           </footer>
+    </body>
 </html>
