--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -20,24 +20,31 @@
 
     <!-- Main Content -->
     <main>
-      <h2>Registration Information</h2>
-      <p>Please complete the registration form below to secure your spot at TechCon 2024.</p>
+      <h2>Secure Your Spot</h2>
+      <p>Please fill out the form below to register for TechCon 2024.</p>
 
       <form action="submit_registration.php" method="post">
+        <!-- Name Field -->
         <label for="name">Full Name:</label><br>
         <input type="text" id="name" name="name" required><br><br>
 
+        <!-- Email Field -->
         <label for="email">Email Address:</label><br>
         <input type="email" id="email" name="email" required><br><br>
 
-        <label for="ticket">Ticket Type:</label><br>
-        <select id="ticket" name="ticket">
-          <option value="standard">Standard - $100</option>
-          <option value="vip">VIP - $250</option>
-          <option value="student">Student - $50</option>
-        </select><br><br>
+        <!-- Password Fields -->
+        <label for="password">Password:</label><br>
+        <input type="password" id="password" name="password" required><br><br>
 
-        <input type="submit" value="Register">
+        <label for="confirm-password">Confirm Password:</label><br>
+        <input type="password" id="confirm-password" name="confirm-password" required><br><br>
+
+        <!-- Terms and Conditions -->
+        <input type="checkbox" id="terms" name="terms" required>
+        <label for="terms">I agree to the Terms and Conditions</label><br><br>
+
+        <!-- Submit Button -->
+        <button type="submit">Register Now</button>
       </form>
     </main>
 
