--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -20,7 +20,7 @@
 
     <!-- Main Content -->
     <main>
-      <h2>Conference Timetable</h2>
+      <h2>Conference Schedule</h2>
       <table border="1">
         <caption>Detailed Schedule of Events for TechCon 2024</caption>
         <thead>
@@ -32,44 +32,29 @@
         </thead>
         <tbody>
           <tr>
-            <td>09:00 - 09:30</td>
-            <td>Opening Keynote: The Future of Tech</td>
-            <td>Dr. Jane Smith</td>
+            <td>09:00 - 10:00</td>
+            <td>Opening Keynote</td>
+            <td>Jane Doe</td>
           </tr>
           <tr>
-            <td>09:45 - 10:30</td>
-            <td>AI in Everyday Life</td>
-            <td>Michael Johnson</td>
+            <td>10:15 - 11:15</td>
+            <td>AI in 2024</td>
+            <td>John Smith</td>
           </tr>
           <tr>
-            <td>10:45 - 11:30</td>
-            <td>Cybersecurity in 2024</td>
-            <td>Sophia Lee</td>
-          </tr>
-          <tr>
-            <td>11:45 - 12:30</td>
-            <td>Panel Discussion: Startups & Innovation</td>
-            <td>Various Speakers</td>
-          </tr>
-          <tr>
-            <td>12:30 - 14:00</td>
-            <td>Networking Lunch</td>
-            <td>-</td>
+            <td>11:30 - 12:30</td>
+            <td>Cybersecurity Trends</td>
+            <td>Emily Davis</td>
           </tr>
           <tr>
             <td>14:00 - 15:00</td>
-            <td>Workshop: Building Resilient Web Apps</td>
-            <td>Alex Carter</td>
+            <td>Future of Web Development</td>
+            <td>Michael Brown</td>
           </tr>
           <tr>
-            <td>15:15 - 16:00</td>
-            <td>Cloud Computing Trends</td>
-            <td>Priya Kumar</td>
-          </tr>
-          <tr>
-            <td>16:15 - 17:00</td>
-            <td>Closing Remarks</td>
-            <td>Conference Committee</td>
+            <td>15:15 - 16:15</td>
+            <td>Panel Discussion</td>
+            <td>Various Speakers</td>
           </tr>
         </tbody>
       </table>
