--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -2,12 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Contact TechCon 2024</title>
+    <title>Contact Us - TechCon 2024</title>
+    <style>
+      iframe {
+        width: 100%;
+        height: 300px;
+        border: 0;
+      }
+    </style>
   </head>
   <body>
     <!-- Header -->
     <header>
-      <h1>Contact TechCon 2024</h1>
+      <h1>Contact Us</h1>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -21,12 +28,41 @@
     <!-- Main Content -->
     <main>
       <h2>Get in Touch</h2>
-      <p>If you have any questions, please feel free to reach out to us through the following channels:</p>
-      <ul>
-        <li>Email: <a href="mailto:info@techcon2024.com">info@techcon2024.com</a></li>
-        <li>Phone: +1 (555) 123-4567</li>
-        <li>Address: 123 Tech Street, Innovation City, USA</li>
-      </ul>
+      <p>If you have any questions, feel free to reach out to us using the details below or the form provided.</p>
+
+      <!-- Contact Information -->
+      <section>
+        <h3>Contact Information</h3>
+        <p>Email: <a href="mailto:email@example.com">email@example.com</a></p>
+        <p>Follow us on:
+          <a href="https://twitter.com" target="_blank">Twitter</a> |
+          <a href="https://facebook.com" target="_blank">Facebook</a> |
+          <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+        </p>
+      </section>
+
+      <!-- Embedded Google Maps -->
+      <section>
+        <h3>Conference Venue</h3>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.086392838061!2d-122.41941548468164!3d37.77492977975959!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80858064d64f6d0d%3A0xdeb4f60a71e0!2sMoscone%20Center!5e0!3m2!1sen!2sus!4v1617041617648!5m2!1sen!2sus" allowfullscreen="" loading="lazy"></iframe>
+      </section>
+
+      <!-- Contact Form -->
+      <section>
+        <h3>Contact Us Form</h3>
+        <form action="submit_contact.php" method="post">
+          <label for="name">Name:</label><br>
+          <input type="text" id="name" name="name" required><br><br>
+
+          <label for="email">Email:</label><br>
+          <input type="email" id="email" name="email" required><br><br>
+
+          <label for="message">Message:</label><br>
+          <textarea id="message" name="message" rows="5" required></textarea><br><br>
+
+          <button type="submit">Send Message</button>
+        </form>
+      </section>
     </main>
 
     <!-- Footer -->
